# RISOTTO

./: CMakeLists.txt  LICENSE  Makefile  README.md  a.out  api_endpoints.cc  average_results_20_0.2.csv  common.cc  common.h  ev.cc  ev.h  eval10_interm.py  evaluation_10houses.py  faraday.py  faraday_postprocessing.py  json_interm.txt  json_pvwatts.txt  load_analysis.py  load_analysis_sum.py  main.cpp  myApp  policy_capex.py  policy_capex2.py  run_simulation.cc  simulate_system.cc  simulate_system2.cc
Detached/: A_April_Friday.json  A_April_Monday.json  A_April_Saturday.json  A_April_Sunday.json  A_April_Thursday.json  A_April_Tuesday.json  A_April_Wednesday.json  A_August_Friday.json  A_August_Monday.json  A_August_Saturday.json  A_August_Sunday.json  A_August_Thursday.json  A_August_Tuesday.json  A_August_Wednesday.json  A_December_Friday.json  A_December_Monday.json  A_December_Saturday.json  A_December_Sunday.json  A_December_Thursday.json  A_December_Tuesday.json  A_December_Wednesday.json  A_February_Friday.json  A_February_Monday.json  A_February_Saturday.json  A_February_Sunday.json  A_February_Thursday.json  A_February_Tuesday.json  A_February_Wednesday.json  A_January_Friday.json  A_January_Monday.json  A_January_Saturday.json  A_January_Sunday.json  A_January_Thursday.json  A_January_Tuesday.json  A_January_Wednesday.json  A_July_Friday.json  A_July_Monday.json  A_July_Saturday.json  A_July_Sunday.json  A_July_Thursday.json  (+128 more)
Semi_Detached/: A_April_Friday.json  A_April_Monday.json  A_April_Saturday.json  A_April_Sunday.json  A_April_Thursday.json  (+163 more)
(+293 files in other folders)
